# FANN-neural-network-on-XOR

./: CMakeLists.txt  HelloExec.cxx  HelloTrain.cxx
